src/objects/CHANNEL_ORDERS__Customer__c.object
<CustomObject>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_City__c</fullName>
        <label>City</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Company_Name__c</fullName>
        <label>Company Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Org_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Org ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_State__c</fullName>
        <label>State/Province/Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_ZIP_Postal_Code__c</fullName>
        <label>ZIP/Postal Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Customer</label>
    <listViews>
        <fullName>CHANNEL_ORDERS__All</fullName>
        <columns>NAME</columns>
        <columns>CHANNEL_ORDERS__Customer_Company_Name__c</columns>
        <columns>CHANNEL_ORDERS__Customer_City__c</columns>
        <columns>CHANNEL_ORDERS__Customer_Country__c</columns>
        <columns>CHANNEL_ORDERS__Customer_Org_ID__c</columns>
        <columns>CHANNEL_ORDERS__Customer_State__c</columns>
        <columns>CHANNEL_ORDERS__Customer_Street__c</columns>
        <columns>CHANNEL_ORDERS__Customer_ZIP_Postal_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Queue_Test_Customer</fullName>
        <filterScope>Queue</filterScope>
        <label>Queue Test</label>
        <queue>Queue_Test</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Country_2_letter_code</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(  CHANNEL_ORDERS__Customer_Country__c  , &quot;[A-Z]{2}&quot;))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Customer_Country__c</errorDisplayField>
        <errorMessage>Invalid Country - Country cannot contain special characters or numbers, Country is a two letter code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Invalid_OrgID</fullName>
        <active>true</active>
        <description>Invalid Org Id format</description>
        <errorConditionFormula>OR(not(begins( CHANNEL_ORDERS__Customer_Org_ID__c ,&quot;00D&quot;)),AND( LEN(CHANNEL_ORDERS__Customer_Org_ID__c) &lt;&gt;15))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Customer_Org_ID__c</errorDisplayField>
        <errorMessage>Invalid Org ID - Org IDs begin with 00D and are 15 characters in length.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__OrgID_must_be_alphanumeric</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(CHANNEL_ORDERS__Customer_Org_ID__c , &quot;[a-zA-Z0-9]+&quot;))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Customer_Org_ID__c</errorDisplayField>
        <errorMessage>Org ID cannot contain special characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Valid_Canada_State</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
CHANNEL_ORDERS__Customer_Country__c = &apos;CA&apos; , 
NOT(
CONTAINS(&apos;AB:BC:MB:NB:NL:NS:NT:NU:ON:PE:QC:SK:YT&apos;,  CHANNEL_ORDERS__Customer_State__c )  
))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Customer_State__c</errorDisplayField>
        <errorMessage>Invalid State - State is not valid for country CA.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Valid_US_State</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
CHANNEL_ORDERS__Customer_Country__c = &apos;US&apos; , 
NOT(
CONTAINS(&apos;AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:WA:WV:WI:WY:PR&apos;,  CHANNEL_ORDERS__Customer_State__c )  
))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Customer_State__c</errorDisplayField>
        <errorMessage>Invalid State - State is not valid for Country US.</errorMessage>
    </validationRules>
</CustomObject>